--- a/style.css
+++ b/style.css
@@ -11,18 +11,18 @@ body {
 }
 
 #result {
-    display: inline-block;
+    display: inline-block;  
     margin: 2px;
     background-color: #777;
     font-size: 26px;
     padding: 20px 40px;
-    width: 81%;
+    width: 70%;
     min-height: 30px;
 }
 
 .botao {
     margin: 2px;
-    padding: 10px 43px;
+    padding: 10px 30px;
     background-color: #777;
     cursor: pointer;
 }
@@ -30,6 +30,32 @@ body {
 #botoes {
     font-size: 26px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+}
+
+#zero {
+    grid-column: 1 / 3;
+}
+
+#mais {
+    grid-column: 2;
+    grid-row: 3 / 5;
+}
+
+#CE {
+    font-size: 15px;
+}
+
+#botoes .numeric {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+#botoes .func {
+    margin-left: 5px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
+    width: 50%;
 }
